<?xml version="1.0"?>
<package format="2">
  <!-- byh_uav -->
  <name>byh_uav</name>
  <!-- 版本 -->
  <version>0.0.0</version>
  <!-- 作者信息 -->
  <description>The byh_uav package</description>
  <maintainer email="byh_uav@whu.edu.cn">byh_uav</maintainer>
  <!-- 开源协议 -->
  <license>TODO</license>
  <!-- 依赖工具 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 依赖包 -->
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
