<?xml version="1.0"?>
<package format="2">
  <name>ultra_sound</name>
  <version>0.0.1</version>
  <description>The serial_reader package</description>

  <maintainer email="1172931421@qq.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pnt_msgs</build_depend>
  <build_depend>byh_uav</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pnt_msgs</exec_depend>
  <exec_depend>byh_uav</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
